--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "first_lesson": "node first_lesson.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Eliseev88/node.js/issues"
   },
-  "homepage": "https://github.com/Eliseev88/node.js#readme"
+  "homepage": "https://github.com/Eliseev88/node.js#readme",
+  "dependencies": {
+    "colors": "^1.4.0"
+  }
 }
