completed 2nd lesson

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "first_lesson": "node first_lesson.js",
+    "second_lesson": "node second_lesson.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
