--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "first_lesson": "node first_lesson.js",
     "second_lesson": "node second_lesson.js",
     "third_lesson": "node third_lesson.js",
+    "fourth_lesson": "node fourth_lesson.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,11 @@
   },
   "homepage": "https://github.com/Eliseev88/node.js#readme",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "inquirer": "^8.2.0",
+    "yargs": "^17.3.0"
+  },
+  "bin": {
+    "reader": "fourth_lesson.js"
   }
 }
